# qdomyos-zwift

./: .assistant_prefs  .gitignore  .gitmodules  .qmake.stash  AGENTS.md  ANALYSIS_EXECUTIVE_SUMMARY.md  ANALYSIS_INDEX.md  BUG_FIX_ANALYSIS_OctaneTreadmill.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  COMPREHENSIVE_CPP_VS_PYTHON_COMPARISON.md  CORRECTED_CODE_SNIPPETS.md  CRITICAL_ISSUES_SUMMARY.md  Carbon TL connects but won't auto change speed or inclination  GARMIN_OAUTH_SETUP.md  GARMIN_SSO_ANALYSIS.md  Makefile  PYTHON_GARTH_OAUTH1_DETAILED_ANALYSIS.md  PrivacyInfo.xcprivacy  README.md  SIDE_BY_SIDE_CODE_COMPARISON.md  TRADUZIONE-TEMPLATE-IT.md  UNINSTALL_ANT_ENV.txt  a.txt  compile-qt-jar.sh  configure-android-multiabi.bat  configure-android-multiabi.sh  debug-Thu_Dec_11_15_00_13_2025.log.txt  defaults.pri  extract_garth_credentials.py  extract_packets_from_log.py  generate_appx_windows_store.bat  octane_packets.csv  perf-runner-local.sh  qDomyos-Zwift.conf.txt  qdomyos-zwift.code-workspace  qdomyos-zwift.pro  test-width-runner-local.sh  (+3 more)
src/: .clang-format  AccordionCheckElement.qml  AccordionElement.qml  AppxManifest.xml  Browser.qml  CLAUDE.md  CMakeLists.txt  CRC16IBM.h  ChartFooter.qml  ChartFooterInnerJS.qml  ChartFooterInnerNoJS.qml  ChartJsTest.qml  ChartsEndWorkout.qml  ChartsEndWorkoutForm.ui.qml  Classifica.qml  Computrainer.cpp  Computrainer.h  ConsoleReader.cpp  ConsoleReader.h  Constants.qml  Credits.qml  CrossQFile.cpp  CrossQFile.h  Daum.cpp  Daum.h  EventHandler.h  GPXList.qml  GenericDeviceDialog.qml  GoogleMap.qml  GrupettoDisclaimer.qml  Home.qml  HomeForm.ui.qml  IndicatorOnlySwitch.qml  Mainwindow.qml  MainwindowForm.ui.qml  Makefile.qdomyos-zwift  Makefile.qdomyos-zwift-lib  NewPageElement.qml  OAuth2.h  Page1Form.ui.qml  (+631 more)
src/android/: AndroidManifest.xml  build.gradle  gradle.properties  proguard-rules.pro
src/characteristics/: characteristicnotifier.cpp  characteristicnotifier.h  characteristicnotifier0002.cpp  characteristicnotifier0002.h  characteristicnotifier0004.cpp  characteristicnotifier0004.h  characteristicnotifier1224.cpp  characteristicnotifier1224.h  characteristicnotifier2a37.cpp  characteristicnotifier2a37.h  characteristicnotifier2a53.cpp  characteristicnotifier2a53.h  characteristicnotifier2a5b.cpp  characteristicnotifier2a5b.h  characteristicnotifier2a63.cpp  characteristicnotifier2a63.h  characteristicnotifier2acc.cpp  characteristicnotifier2acc.h  characteristicnotifier2acd.cpp  characteristicnotifier2acd.h  characteristicnotifier2ad2.cpp  characteristicnotifier2ad2.h  characteristicnotifier2ad9.cpp  characteristicnotifier2ad9.h  characteristicwriteprocessor.cpp  characteristicwriteprocessor.h  characteristicwriteprocessor0003.cpp  characteristicwriteprocessor0003.h  characteristicwriteprocessor2ad9.cpp  characteristicwriteprocessor2ad9.h  characteristicwriteprocessore005.cpp  characteristicwriteprocessore005.h
src/devices/: bike.cpp  bike.h  bluetooth.cpp  bluetooth.h  bluetoothdevice.cpp  bluetoothdevice.h  discoveryoptions.h  elliptical.cpp  elliptical.h  jumprope.cpp  jumprope.h  rower.cpp  rower.h  stairclimber.cpp  stairclimber.h  treadmill.cpp  treadmill.h
src/fit-sdk/: FitDecode.h  FitDecode.mm  FitDeveloperField.h  FitDeveloperField.mm  FitEncode.h  FitEncode.mm  FitField.h  FitField.mm  FitFieldDefinition.h  FitFieldDefinition.mm  FitMesg.h  FitMesg.mm  FitMesgDefinition.h  FitMesgDefinition.mm  fit.cpp  fit.hpp  fit_aad_accel_features_mesg.hpp  fit_aad_accel_features_mesg_listener.hpp  fit_accelerometer_data_mesg.hpp  fit_accelerometer_data_mesg_listener.hpp  fit_accumulated_field.cpp  fit_accumulated_field.hpp  fit_accumulator.cpp  fit_accumulator.hpp  fit_activity_mesg.hpp  fit_activity_mesg_listener.hpp  fit_ant_channel_id_mesg.hpp  fit_ant_channel_id_mesg_listener.hpp  fit_ant_rx_mesg.hpp  fit_ant_rx_mesg_listener.hpp  fit_ant_tx_mesg.hpp  fit_ant_tx_mesg_listener.hpp  fit_aviation_attitude_mesg.hpp  fit_aviation_attitude_mesg_listener.hpp  fit_barometer_data_mesg.hpp  fit_barometer_data_mesg_listener.hpp  fit_beat_intervals_mesg.hpp  fit_beat_intervals_mesg_listener.hpp  fit_bike_profile_mesg.hpp  fit_bike_profile_mesg_listener.hpp  (+274 more)
src/gpx/: Box Hill.gpx  Butterfield Canyon Road.gpx  Crater Lake.gpx  Govi to Hood.gpx  Italy - Passo dello Stelvio.gpx  Pittenweem to St Andrews.gpx  Richmond Park.gpx  St Andrews to Pittenweem.gpx
src/icons/: icon.xcf
src/inner_templates/: i18n.js
src/ios/: APIFetcher.swift  AccessorySetupManager.swift  AdbClient.h  AppDelegate.swift  BLEPeripheralManager.swift  BleScanner.swift  Dircon.swift  GarminConnect.swift  Info.plist  LiveActivityBridge.swift  LiveActivityManager.swift  LocalNotificationHelper.swift  M3iIOS-Interface.h  M3iNS.h  M3iNS.mm  M3iNSQT.cpp  M3iNSQT.mm  PrivacyInfo.xcprivacy  QZWidgetLiveActivity.swift  QZWorkoutAttributes.swift  ViewController.swift  WatchKitConnection.swift  WorkoutAIService.swift  WorkoutAppIntents.swift  WorkoutTracking.swift  ios_accessibility_helper.h  ios_accessibility_helper.mm  ios_app_delegate.mm  ios_blescanner.h  ios_blescanner.mm  ios_bluetooth_background.mm  ios_bluetoothsettings.h  ios_bluetoothsettings.mm  ios_echelonconnectsport.h  ios_echelonconnectsport.mm  ios_eliteariafan.h  ios_eliteariafan.mm  ios_liveactivity.h  ios_liveactivity.mm  ios_wahookickrsnapbike.h  (+19 more)
src/lockscreen/: androidlockscreen.cpp  androidlockscreen.h  defaultlockscreenfunctions.cpp  defaultlockscreenfunctions.h  lockscreenfunctions.cpp  lockscreenfunctions.h  qdebuglockscreenfunctions.cpp  qdebuglockscreenfunctions.h  qzlockscreen.cpp  qzlockscreen.h  qzlockscreenfunctions.cpp  qzlockscreenfunctions.h
src/macos/: lockscreen.h  lockscreen.mm
src/macx/: Info.plist
src/mqtt/: qmqttauthenticationproperties.cpp  qmqttauthenticationproperties.h  qmqttclient.cpp  qmqttclient.h  qmqttclient_p.h  qmqttconnection.cpp  qmqttconnection_p.h  qmqttconnectionproperties.cpp  qmqttconnectionproperties.h  qmqttconnectionproperties_p.h  qmqttcontrolpacket.cpp  qmqttcontrolpacket_p.h  qmqttglobal.h  qmqttmessage.cpp  qmqttmessage.h  (+15 more)
(+3269 files in other folders)
